--- a/.gitlab-ci/image-build.yml
+++ b/.gitlab-ci/image-build.yml
@@ -17,6 +17,10 @@ build operator jvm image:
       flock /tmp/stackgres-operator-build-jvm-image \
         sh -xe operator/src/main/docker/build-image-jvm.sh
     - docker push "$TARGET_OPERATOR_IMAGE_NAME"
+  rules:
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build restapi jvm image:
   image: docker:20.10.6
@@ -36,6 +40,10 @@ build restapi jvm image:
       flock /tmp/stackgres-restapi-build-jvm-image \
         sh -xe api-web/src/main/docker/build-image-jvm.sh
     - docker push "$TARGET_RESTAPI_IMAGE_NAME"
+  rules:
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build jobs jvm image:
   image: docker:20.10.6
@@ -55,6 +63,10 @@ build jobs jvm image:
       flock /tmp/stackgres-jobs-build-jvm-image \
         sh -xe jobs/src/main/docker/build-image-jvm.sh
     - docker push "$TARGET_JOBS_IMAGE_NAME"
+  rules:
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build cluster-controller jvm image:
   image: docker:20.10.6
@@ -74,6 +86,10 @@ build cluster-controller jvm image:
       flock /tmp/stackgres-cluster-controller-build-jvm-image \
         sh -xe cluster-controller/src/main/docker/build-image-jvm.sh
     - docker push "$TARGET_CLUSTER_CONTROLLER_IMAGE_NAME"
+  rules:
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build distributedlogs-controller jvm image:
   image: docker:20.10.6
@@ -93,6 +109,10 @@ build distributedlogs-controller jvm image:
       flock /tmp/stackgres-distributedlogs-controller-build-jvm-image \
         sh -xe distributedlogs-controller/src/main/docker/build-image-jvm.sh
     - docker push "$TARGET_DISTRIBUTEDLOGS_CONTROLLER_IMAGE_NAME"
+  rules:
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build operator native image:
   image: docker:20.10.6
@@ -112,13 +132,14 @@ build operator native image:
       flock /tmp/stackgres-operator-build-native-image \
         sh -xe operator/src/main/docker/build-image-native.sh
     - docker push "$TARGET_OPERATOR_IMAGE_NAME"
-  only:
-    variables:
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-      - $DO_NATIVE
+  rules:
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/'
+    - if: '$DO_DEPLOY'
+    - if: '$DO_NATIVE'
+    - if: '$DOCS_ONLY'
+      when: never
 
 build restapi native image:
   image: docker:20.10.6
@@ -138,13 +159,15 @@ build restapi native image:
       flock /tmp/stackgres-restapi-build-native-image \
         sh -xe api-web/src/main/docker/build-image-native.sh
     - docker push "$TARGET_RESTAPI_IMAGE_NAME"
-  only:
-    variables:
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-      - $DO_NATIVE
+  rules:
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/'
+    - if: '$DO_DEPLOY'
+    - if: '$DO_NATIVE'
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build jobs native image:
   image: docker:20.10.6
@@ -164,13 +187,15 @@ build jobs native image:
       flock /tmp/stackgres-jobs-build-native-image \
         sh -xe jobs/src/main/docker/build-image-native.sh
     - docker push "$TARGET_JOBS_IMAGE_NAME"
-  only:
-    variables:
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-      - $DO_NATIVE
+  rules:
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/'
+    - if: '$DO_DEPLOY'
+    - if: '$DO_NATIVE'
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build cluster-controller native image:
   image: docker:20.10.6
@@ -190,13 +215,15 @@ build cluster-controller native image:
       flock /tmp/stackgres-cluster-controller-build-native-image \
         sh -xe cluster-controller/src/main/docker/build-image-native.sh
     - docker push "$TARGET_CLUSTER_CONTROLLER_IMAGE_NAME"
-  only:
-    variables:
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-      - $DO_NATIVE
+  rules:
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/'
+    - if: '$DO_DEPLOY'
+    - if: '$DO_NATIVE'
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build distributedlogs-controller native image:
   image: docker:20.10.6
@@ -216,13 +243,15 @@ build distributedlogs-controller native image:
       flock /tmp/stackgres-distributedlogs-controller-build-native-image \
         sh -xe distributedlogs-controller/src/main/docker/build-image-native.sh
     - docker push "$TARGET_DISTRIBUTEDLOGS_CONTROLLER_IMAGE_NAME"
-  only:
-    variables:
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"
-      - $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
-      - $DO_DEPLOY
-      - $DO_NATIVE
+  rules:
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "master"'
+    - if: '$SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/'
+    - if: '$DO_DEPLOY'
+    - if: '$DO_NATIVE'
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build admin-ui image:
   image: docker:20.10.6
@@ -242,6 +271,10 @@ build admin-ui image:
       flock /tmp/stackgres-adminui-build-image \
         sh -xe admin-ui/docker/build.sh
     - docker push "$TARGET_ADMINUI_IMAGE_NAME"
+  rules:
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
 
 build test image:
   image: docker:20.10.6
@@ -270,3 +303,7 @@ build test image:
       echo ...done
       EOF
     - flock /tmp/stackgres-build-it-image sh -xe build-test-image.sh
+  rules:
+    - if: '$DOCS_ONLY'
+      when: never
+    - when: on_success
