--- a/stackgres-k8s/src/api-web/src/main/swagger/schemas/ClusterDto.yaml
+++ b/stackgres-k8s/src/api-web/src/main/swagger/schemas/ClusterDto.yaml
@@ -69,6 +69,10 @@ schema:
                   * **Pending**: The pod has been accepted by the Kubernetes system, but one or more of the container images has not been created. This includes time before being scheduled as well as time spent downloading images over the network, which could take a while.
                   * **Failed**: All containers in the pod have terminated, and at least one container has terminated in failure. The container either exited with non-zero status or was terminated by the system.
                   * **Unknown**: For some reason the state of the pod could not be obtained, typically due to an error in communicating with the host of the pod.
+              componentVersions:
+                type: object
+                description: |
+                  The versions of components currenlty running in this Pod.
               containers:
                 type: integer
                 description: |
