--- a/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
+++ b/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
@@ -38,6 +38,7 @@ static_resources:
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.postgres_proxy.v3alpha.PostgresProxy
           stat_prefix: ingress_postgres
+          enable_sql_parsing: false
       - name: envoy.tcp_proxy
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
