--- a/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
@@ -579,6 +579,14 @@ spec:
                           type: string
                           description: |
                             The primary instance that this operation is targetting
+                        sourcePostgresVersion:
+                          type: string
+                          description: |
+                            Postgres version that is currently running on the cluster
+                        targetPostgresVersion:
+                          type: string
+                          description: |
+                            The desired Postgres version for the cluster
                     securityUpgrade:
                       type: object
                       description: |
