--- a/stackgres-k8s/src/operator/src/test/docker/Dockerfile.it
+++ b/stackgres-k8s/src/operator/src/test/docker/Dockerfile.it
@@ -8,7 +8,7 @@
 ###
 FROM docker.io/docker:19.03
 
-RUN wget -q -O /bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.19.2/bin/linux/amd64/kubectl
+RUN wget -q -O /bin/kubectl https://dl.k8s.io/release/v1.21.0/bin/linux/amd64/kubectl
 RUN chmod a+x /bin/kubectl
 RUN wget -q -O /bin/kind https://github.com/kubernetes-sigs/kind/releases/download/v0.11.0/kind-$(uname)-amd64
 RUN chmod a+x /bin/kind
