feat: Support Postgres 13
And remove Postgres 11

--- a/stackgres-k8s/e2e/spec/failover.values.yaml
+++ b/stackgres-k8s/e2e/spec/failover.values.yaml
@@ -5,7 +5,7 @@ configurations:
   backupconfig:
     create: false
 cluster:
-  postgresVersion: "12.3"
+  postgresVersion: latest
   pods:
     persistentVolume:
       size: 128Mi
