--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -2,25 +2,25 @@ containerRegistry: docker.io
 operator:
   image:
     name: "stackgres/operator"
-    tag: "1.0.0-beta1"
+    tag: "development-jvm"
     pullPolicy: "IfNotPresent"
 restapi:
   name: stackgres-restapi
   image:
     name: "stackgres/restapi"
-    tag: "1.0.0-beta1"
+    tag: "development-jvm"
     pullPolicy: "IfNotPresent"
 jobs:
   name: stackgres-jobs
   image:
     name: "stackgres/jobs"
-    tag: "1.0.0-beta1"
+    tag: "development-jvm"
     pullPolicy: "IfNotPresent"
 adminui:
   name: stackgres-adminui
   image:
     name: "stackgres/admin-ui"
-    tag: "1.0.0-beta1"
+    tag: "development"
     pullPolicy: "IfNotPresent"
   service:
     exposeHTTP: false
